<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    xmlns:tools="http://schemas.android.com/tools"  
    android:layout_width="match_parent"  
    android:layout_height="match_parent"  
    android:orientation="vertical"  
    tools:context=".MainActivity" >  
    <TextView  
        android:id="@+id/title"  
        android:layout_width="match_parent"  
        android:layout_height="22dp"  
        android:gravity="center_horizontal"  
        android:text="课程表"  
        android:layout_marginBottom="5dp"
        android:textSize="18sp" />  
    <LinearLayout   
        android:id="@+id/weekName"  
        android:layout_width="match_parent"  
        android:layout_height="wrap_content"  
        android:orientation="horizontal">  
         <TextView  
                android:layout_width="0dp"  
                android:layout_height="20dp"  
                android:layout_weight="0.5"  
                android:gravity="center_horizontal|center_vertical"  
                android:background="@color/classIndex"  
                 android:layout_marginLeft="@dimen/weekItemMarLeft"  
                android:text="" />  
         <TextView  
                android:layout_width="0dp"  
                android:layout_height="20dp"  
                android:layout_weight="1"  
                android:gravity="center_horizontal|center_vertical"  
                android:background="@color/classIndex"  
                android:text="周一" />  
         <TextView  
                android:layout_width="0dp"  
                android:layout_height="20dp"  
                android:layout_weight="1"  
                android:gravity="center_horizontal|center_vertical"  
                android:background="@color/classIndex"  
                android:text="周二" />  
         <TextView  
                android:layout_width="0dp"  
                android:layout_height="20dp"  
                android:layout_weight="1"  
                android:gravity="center_horizontal|center_vertical"  
                android:background="@color/classIndex"  
                android:text="周三" />  
         <TextView  
                android:layout_width="0dp"  
                android:layout_height="20dp"  
                android:layout_weight="1"  
                android:gravity="center_horizontal|center_vertical"  
                android:background="@color/classIndex"  
                android:text="周四" />  
         <TextView  
                android:layout_width="0dp"  
                android:layout_height="20dp"  
                android:layout_weight="1"  
                android:gravity="center_horizontal|center_vertical"  
                android:background="@color/classIndex"  
                android:text="周五" />  
         <TextView  
                android:layout_width="0dp"  
                android:layout_height="20dp"  
                android:layout_weight="1"  
                android:gravity="center_horizontal|center_vertical"  
                android:background="@color/classIndex"  
                android:text="周六" />  
         <TextView  
                android:layout_width="0dp"  
                android:layout_height="20dp"  
                android:layout_weight="1"  
                android:gravity="center_horizontal|center_vertical"  
                android:background="@color/classIndex"  
                android:text="周日" />  
          
    </LinearLayout>  
    <ScrollView   
        android:id="@+id/scrollPanel"  
        android:layout_width="match_parent"  
        android:layout_height="wrap_content"  
        >  
        <LinearLayout   
            android:id="@+id/contentPanel"  
            android:layout_width="match_parent"  
            android:layout_height="wrap_content"  
            android:orientation="horizontal"  
            >  
            <LinearLayout   
                android:id="@+id/weekPanel_0"  
                android:layout_width="0dp"  
                android:layout_height="wrap_content"  
                android:layout_weight="0.5"  
                android:orientation="vertical"  
                >  
                <TextView  
                    android:layout_width="fill_parent"  
                    android:layout_height="@dimen/weekItemHeight"  
                    android:gravity="center_horizontal|center_vertical"  
                    android:background="@color/classIndex"  
                    android:layout_marginTop="@dimen/weekItemMarTop"  
                    android:layout_marginLeft="@dimen/weekItemMarLeft"  
                    android:text="@string/time1" />  
                    
                <TextView  
                    android:layout_width="fill_parent"  
                    android:layout_height="@dimen/weekItemHeight"  
                    android:gravity="center_horizontal|center_vertical"  
                    android:background="@color/classIndex"  
                    android:layout_marginTop="@dimen/weekItemMarTop"  
                    android:layout_marginLeft="@dimen/weekItemMarLeft"  
                    android:text="@string/time2" />  
                    
                <TextView   
                    android:layout_width="fill_parent"  
                    android:layout_height="@dimen/weekItemHeight"  
                    android:gravity="center_horizontal|center_vertical"  
                    android:text="@string/time3"  
                    android:background="@color/classIndex"  
                    android:layout_marginTop="@dimen/weekItemMarTop"  
                    android:layout_marginLeft="@dimen/weekItemMarLeft"  
                    />  
                <TextView   
                    android:layout_width="fill_parent"  
                    android:layout_height="@dimen/weekItemHeight"  
                    android:gravity="center_horizontal|center_vertical"  
                    android:text="@string/time4"  
                    android:background="@color/classIndex"  
                    android:layout_marginTop="@dimen/weekItemMarTop"  
                    android:layout_marginLeft="@dimen/weekItemMarLeft"  
                    />  
                    
               <TextView   
                    android:layout_width="fill_parent"  
                    android:layout_height="@dimen/weekItemHeight"  
                    android:gravity="center_horizontal|center_vertical"  
                    android:text="@string/time5"  
                    android:background="@color/classIndex"  
                    android:layout_marginTop="@dimen/weekItemMarTop"  
                    android:layout_marginLeft="@dimen/weekItemMarLeft"  
                    /> 
                
            </LinearLayout>  
            <!-- 周一到周日的排列 -->  
            <LinearLayout   
                android:id="@+id/weekPanel_1"  
                android:layout_width="0dp"  
                android:layout_height="wrap_content"  
                android:layout_weight="1.0"  
                android:orientation="vertical"  
                >  
                  
            </LinearLayout>  
            <LinearLayout   
                android:id="@+id/weekPanel_2"  
                android:layout_width="0dp"  
                android:layout_height="wrap_content"  
                android:layout_weight="1.0"  
                android:orientation="vertical"  
                >  
                  
            </LinearLayout>  
            <LinearLayout   
                android:id="@+id/weekPanel_3"  
                android:layout_width="0dp"  
                android:layout_height="wrap_content"  
                android:layout_weight="1.0"  
                android:orientation="vertical"  
                >  
                  
            </LinearLayout>  
            <LinearLayout   
                android:id="@+id/weekPanel_4"  
                android:layout_width="0dp"  
                android:layout_height="wrap_content"  
                android:layout_weight="1.0"  
                android:orientation="vertical"  
                >  
                  
            </LinearLayout>  
            <LinearLayout   
                android:id="@+id/weekPanel_5"  
                android:layout_width="0dp"  
                android:layout_height="wrap_content"  
                android:layout_weight="1.0"  
                android:orientation="vertical"  
                >  
                  
            </LinearLayout>  
            <LinearLayout   
                android:id="@+id/weekPanel_6"  
                android:layout_width="0dp"  
                android:layout_height="wrap_content"  
                android:layout_weight="1.0"  
                android:orientation="vertical"  
                >  
                  
            </LinearLayout>  
            <LinearLayout   
                android:id="@+id/weekPanel_7"  
                android:layout_width="0dp"  
                android:layout_height="wrap_content"  
                android:layout_weight="1.0"  
                android:orientation="vertical">  
            </LinearLayout>  
        </LinearLayout>  
    </ScrollView> 
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shuoming"
        />
</LinearLayout>  